bug and style fix

--- a/views/index.html
+++ b/views/index.html
@@ -24,7 +24,7 @@
                         <label for="quality">Quality:</label>
                         <select id="quality" name="quality">
                             <option value="lowest">Lowest</option>
-                            <option value="Lowest">Highest</option>
+                            <option value="highest">Highest</option>
                             <!--<option value="144">144p</option>
                             <option value="240">240p</option>
                             <option value="360">360p</option>
@@ -33,7 +33,6 @@
                             <option value="1080">1080p</option>-->
                         </select>
                     </div>
-                    <span style="width: 30px;"></span>
                     <div class="select-container">
                         <label for="format">Format:</label>
                         <select id="format" name="format">
