--- a/views/public/style.css
+++ b/views/public/style.css
@@ -9,16 +9,12 @@ body {
 .container {
     max-width: 800px;
     margin: 0 auto;
-    padding: 50px 20px;
+    padding: 20px;
     text-align: center;
 }
 
-.header {
-    margin-bottom: 50px;
-}
-
 h1 {
-    font-size: 72px;
+    font-size: 64px;
     margin-bottom: 20px;
     letter-spacing: 2px;
 }
@@ -37,7 +33,7 @@ p {
 
 input[type="text"] {
     width: 100%;
-    height: 60px;
+    height: 48px;
     padding: 10px;
     border: none;
     border-radius: 30px;
@@ -101,9 +97,20 @@ select {
 
 .options {
     display: flex;
+    align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
     margin-top: 50px;
+}
+/* Change asap */
+@media screen and (min-width: 1370px) {
+    .container {
+        padding: 0px !important;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
 }
 
 @media screen and (max-width: 600px) {
@@ -188,14 +195,17 @@ select {
     }
 
 }
+/* */
 input::placeholder {
     position: relative;
     left: 15px;
 }
+
 input::-moz-placeholder {
     position: relative;
     left: 15px;
 }
+
 input::-webkit-input-placeholder {
     position: relative;
     left: 15px;
