--- a/views/index.html
+++ b/views/index.html
@@ -23,14 +23,12 @@
                     <div class="select-container">
                         <label for="quality">Quality:</label>
                         <select id="quality" name="quality">
-                            <option value="lowest">Lowest</option>
-                            <option value="highest">Highest</option>
-                            <!--<option value="144">144p</option>
+                            <option value="144">144p</option>
                             <option value="240">240p</option>
                             <option value="360">360p</option>
                             <option value="480">480p</option>
                             <option value="720">720p</option>
-                            <option value="1080">1080p</option>-->
+                            <option value="1080">1080p</option>
                         </select>
                     </div>
                     <div class="select-container">
